# grano_regressors

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  example_usage.py  make.bat  requirements.txt
src/regressors_grano/: __init__.py  regressor_base.py  regressor_ensemble.py  regressor_grad_boost.py  regressor_lasso.py  regressor_nearest_neighbor.py  regressor_ordinary_least_squares.py  regressor_ridge_regression.py
tests/: test_regressors.py
