[tool.poetry]
name = "regressors_grano"
version = "0.1.0"
description = "Package for Softwareentwicklung II Projekt im SS 2024 an FH Kufstein (DSIA.2023)"
authors = ["Andreas Granitzer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
bs4 = "0.0.2"
asttokens = "2.4.1"
beautifulsoup4 = "4.12.3"
colorama = "0.4.6"
comm = "0.2.2"
debugpy = "1.8.2"
decorator = "5.1.1"
executing = "2.0.1"
iniconfig = "2.0.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
jedi = "0.19.1"
joblib = "1.4.2"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
matplotlib-inline = "0.1.7"
nest-asyncio = "1.6.0"
numpy = "2.0.1"
packaging = "24.1"
pandas = "2.2.2"
parso = "0.8.4"
platformdirs = "4.2.2"
pluggy = "1.5.0"
prompt-toolkit = "3.0.47"
psutil = "6.0.0"
pure-eval = "0.2.3"
pygments = "2.18.0"
pytest = "8.3.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
pywin32 = "306"
pyzmq = "26.0.3"
scikit-learn = "1.5.1"
scipy = "1.14.0"
six = "1.16.0"
soupsieve = "2.5"
stack-data = "0.6.3"
threadpoolctl = "3.5.0"
tornado = "6.4.1"
traitlets = "5.14.3"
typing = "3.7.4.3"
typing-extensions = "4.12.2"
tzdata = "2024.1"
wcwidth = "0.2.13"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
myst-nb = "^1.1.1"
sphinx-autoapi = "^3.2.1"
sphinx-rtd-theme = "^2.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
